--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
 		"react-router-dom": "^6.27.0",
 		"react-slick": "^0.30.2",
 		"redux": "^5.0.1",
-		"slick-carousel": "^1.8.1"
+		"swiper": "^11.1.14"
 	}
 }
