--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,11 @@ jobs:
       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       aws-region: ap-south-1
 
+   - name: Install Dependencies
+     run: npm install
+
+   - name: Build React App
+     run: npm run build
+
    - name: Deploy static site to S3 bucket
-     run: aws s3 sync . s3://portfolio-bharatbhusal --delete
+     run: aws s3 sync ./dist s3://portfolio-bharatbhusal --delete
