--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-router-dom": "^6.27.0",
 		"react-slick": "^0.30.2",
 		"redux": "^5.0.1",
+		"serve": "^14.2.3",
 		"swiper": "^11.1.14"
 	}
 }
