--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
      run: npm run build
 
    - name: Deploy static site to S3 bucket
-     run: aws s3 sync ./dist s3://portfolio-bharatbhusal --delete
+     run: aws s3 sync ./dist s3://bharatbhusal.com --delete
