--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ artifacts:
 post_build:
  commands:
   - echo Syncing with S3 bucket...
-  - aws s3 sync dist/ s3://bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
+  - aws s3 sync dist/ s3://test-bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
   - echo Deployment complete.
 
 cache:
