--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,25 +3,25 @@ version: 0.2
 phases:
  install:
   commands:
-   - echo Installing dependencies...
+   - echo "Installing dependencies..."
    - npm install
 
  build:
   commands:
-   - echo Building the application...
+   - echo "Building the application..."
    - npm run build
+
+ post_build:
+  commands:
+   - echo "Syncing with S3 bucket..."
+   - aws s3 sync dist/ s3://test-bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
+   - echo "Deployment complete."
 
 artifacts:
  files:
   - "**/*" # Include all files from the dist output
  base-directory: dist/ # The output directory is now 'dist'
  discard-paths: yes # Flatten the folder structure in S3
-
-post_build:
- commands:
-  - echo Syncing with S3 bucket...
-  - aws s3 sync dist/ s3://test-bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
-  - echo Deployment complete.
 
 cache:
  paths:
