--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
  post_build:
   commands:
    - echo "Syncing with S3 bucket..."
-   - aws s3 sync dist/ s3://test-bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
+   - aws s3 sync dist/ s3://bharatbhusal.com --delete # Sync dist/ folder with S3 and delete extra files
    - echo "Deployment complete."
 
 artifacts:
